Button classes fixed up, nearly there...

--- a/about.html
+++ b/about.html
@@ -81,11 +81,19 @@
       </p>
     </section>
 
-    <div id="about-buttons">
+    <!-- <div id="about-buttons">
       <form class="button-cont" action="./code.html">
         <input type="submit" value="See my code" class="button" />
       </form>
       <form class="button-cont" action="./resume.html">
+        <input type="submit" value="See my resume" class="button" />
+      </form>
+    </div> -->
+    <div class="button-cont">
+      <form action="./code.html">
+        <input type="submit" value="See my code" class="button" />
+      </form>
+      <form action="./resume.html">
         <input type="submit" value="See my resume" class="button" />
       </form>
     </div>
