--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 <body>
 
   <main>
-
+    
   </main>
     <section class="page">
         <h2 id="welcome-text">Welcome to the portfolio of aspiring web developer, Tané Kaio</h2>
     </section>
-    <div id="about-buttons">
-        <form class="button-cont" action="./about.html">
+    <div class="button-cont">
+        <form action="./about.html">
             <input type="submit" value="Who am I?" class="button" />
         </form>
     </div>
