--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
       <li><a href="./journal.html">journal</a></li>
       <li><a href="./resume.html">resume</a></li>
       <li><a href="./contact.html">contact</a></li>
-      <li><img id="portrait" src="./img/archie.png" alt="Portrait" /></li>
+      <li><img id="portrait" src="./img/tattoo.jpg" alt="Portrait" /></li>
     </ul>
   </nav>
 
@@ -61,7 +61,7 @@
     <h2 class="desk-page-sub">about . about . about . about . about . about . about . about . about</h2>
 
     <figure id="about-img-cont">
-      <img id="about-img" class="img" src="./img/portrait.jpeg" alt="An image of me">
+      <img id="about-img" class="img" src="./img/nz-port.jpg" alt="An image of me">
     </figure>
     <section class="card">
       <h2>About me</h2>
