Added blog list to journal page however commented out because it moves the first expand button?

--- a/journal.html
+++ b/journal.html
@@ -74,6 +74,22 @@
         journal . journal . journal . journal . journal . journal . journal .
         journal . journal . journal . journal . journal
       </h2>
+      <!-- LIST OF BLOG POSTS -->
+      <!-- <section>
+        <ul>
+          <li><a href="#journal-card-1">Blog Post One</a></li>
+          <hr/>
+          <li><a href="#journal-card-2">Blog Post Two</a></li>
+          <hr/>
+          <li><a href="#journal-card-3">Blog Post Three</a></li>
+          <hr/>
+          <li><a href="#journal-card-4">Blog Post Four</a></li>
+          <hr/>
+          <li><a href="#journal-card-5">Blog Post Five</a></li>
+        </ul>
+      </section> -->
+
+
       <!-- FOR CLICK EXPAND -->
       <input type="checkbox" id="expand-check-1" />
       <label for="expand-check-1" class="expand-icon">+/-</label>
