--- a/about-v2.html
+++ b/about-v2.html
@@ -27,66 +27,68 @@
             <h1 id="header-text">portfolio</h1>
             <div id="header-circle"></div>
         </div>
+    </header>
+    <!-- MOBILE NAV MENU -->
 
-        <!-- MOBILE NAV MENU -->
-        <nav>
-
-            <!-- MOBILE HAMBURGER BUTTON/ICON -->
-            <input type="checkbox" id="mob-nav-button" />
-            <label for="mob-nav-button">
-                <span class="fa-solid fa-bars" id="mob-nav-icon">
-                </span>
-            </label>
-
-            <!-- DESK MENU TEXT BUTTON/ICON -->
+    <!-- DESK MENU TEXT BUTTON/ICON
             <input type="checkbox" id="desk-nav-button" />
-            <label for="desk-nav-button" id="desk-nav-icon">menu</label>
+            <label for="desk-nav-button" id="desk-nav-icon">menu</label> -->
 
-            <!-- NAV LIST MENU -->
-            <div id="nav-list">
-                <li><a href="./about.html">about</a></li>
-                <li><a href="./code.html">code</a></li>
-                <!-- <li><a href="./personal.html">personal</a></li> -->
-                <li><a href="./journal.html">journal</a></li>
-                <li><a href="./resume.html">resume</a></li>
-                <li><a href="./contact.html">contact</a></li>
+    <section id="main-container">
+        <!-- MOBILE HAMBURGER BUTTON/ICON -->
+        <input type="checkbox" id="mob-nav-button" />
+        <label for="mob-nav-button">
+            <span class="fa-solid fa-bars" id="mob-nav-icon">
+            </span>
+        </label>
+        <!-- NAV LIST MENU -->
+        <nav id="nav-list">
+            <li><a href="./about.html">about</a></li>
+            <li><a href="./code.html">code</a></li>
+            <!-- <li><a href="./personal.html">personal</a></li> -->
+            <li><a href="./journal.html">journal</a></li>
+            <li><a href="./resume.html">resume</a></li>
+            <li><a href="./contact.html">contact</a></li>
             </div>
         </nav>
-    </header>
+        </header>
 
-    <main>
-        <section>
-            <!-- PAGE SUBHEADING -->
-            <h2 class="desk-page-sub">about . about . about . about . about . about . about . about . about</h2>
+        <main>
+            <section class="content">
+                <!-- PAGE SUBHEADING -->
+                <h2 class="desk-page-sub">about . about . about . about . about . about . about . about . about</h2>
 
-            <figure id="about-img-cont">
-                <img id="about-img" class="img" src="./img/nz-port.jpg" alt="An image of me">
-            </figure>
+                <figure id="about-img-cont">
+                    <img id="about-img" class="img" src="./img/nz-port.jpg" alt="An image of me">
+                </figure>
 
-            <article class="card">
-                <h2>About me</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec ex tellus. Nulla et orci interdum,
-                    congue
-                    nisl in, ultricies massa. Pellentesque lobortis velit a faucibus ornare. Duis convallis tortor sem,
-                    sed
-                    ullamcorper felis laoreet in. Donec vitae porta nibh. Duis vestibulum tincidunt enim in lobortis.
-                    Fusce ut nunc
-                    eget enim condimentum tempus.
-                </p>
-            </article>
-        </section>
-        <section>
-            <div class="container">
-                <form action="./code.html">
-                    <input type="submit" value="Code" class="button" />
-                </form>
-                <form action="./resume.html">
-                    <input type="submit" value="Resume" class="button" />
-                </form>
-            </div>
-        </section>
-    </main>
-
+                <article class="card">
+                    <h2>About me</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec ex tellus. Nulla et orci
+                        interdum,
+                        congue
+                        nisl in, ultricies massa. Pellentesque lobortis velit a faucibus ornare. Duis convallis tortor
+                        sem,
+                        sed
+                        ullamcorper felis laoreet in. Donec vitae porta nibh. Duis vestibulum tincidunt enim in
+                        lobortis.
+                        Fusce ut nunc
+                        eget enim condimentum tempus.
+                    </p>
+                </article>
+            </section>
+            <section>
+                <div class="container">
+                    <form action="./code.html">
+                        <input type="submit" value="Code" class="button" />
+                    </form>
+                    <form action="./resume.html">
+                        <input type="submit" value="Resume" class="button" />
+                    </form>
+                </div>
+            </section>
+        </main>
+    </section>
     <footer>
         <p id="footer-text">&copy; Tané Kaio, 2022</p>
     </footer>
