Overflow applied to html AND body

--- a/about-v2.html
+++ b/about-v2.html
@@ -77,7 +77,7 @@
                     </p>
                 </article>
             </section>
-            <section>
+            <section class="content">
                 <div class="container">
                     <form action="./code.html">
                         <input type="submit" value="Code" class="button" />
