Changed height units of header/main-container to 4rem instead of vh so it doesn't change heights

--- a/code-v2.html
+++ b/code-v2.html
@@ -43,12 +43,12 @@
         </label>
         <!-- NAV LIST MENU -->
         <nav id="nav-list">
-            <li><a href="./about-v2.html">about</a></li>
-            <li><a href="./code-v2.html">code</a></li>
+            <li><a href="./about.html">about</a></li>
+            <li><a href="./code.html">code</a></li>
             <!-- <li><a href="./personal.html">personal</a></li> -->
-            <li><a href="./journal-v2.html">journal</a></li>
-            <li><a href="./resume-v2.html">resume</a></li>
-            <li><a href="./contact-v2.html">contact</a></li>
+            <li><a href="./journal.html">journal</a></li>
+            <li><a href="./resume.html">resume</a></li>
+            <li><a href="./contact.html">contact</a></li>
             </div>
         </nav>
         </header>
