Added buttons instead of links in code cards

--- a/contact-v2.html
+++ b/contact-v2.html
@@ -16,7 +16,7 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>About / TK</title>
+    <title>Contact</title>
 </head>
 
 <body>
@@ -55,41 +55,23 @@
 
         <main>
             <section class="content">
+
                 <!-- PAGE SUBHEADING -->
                 <span class="page-subheading">
                     <h2>about . about . about . about . about . about . about . about . about</h2>
                 </span>
 
-                <figure id="about-img-cont">
-                    <img id="about-img" class="img" src="./img/nz-port.jpg" alt="An image of me">
-                </figure>
-
-                <article class="card">
-                    <h2>About me</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec ex tellus. Nulla et orci
-                        interdum,
-                        congue
-                        nisl in, ultricies massa. Pellentesque lobortis velit a faucibus ornare. Duis convallis tortor
-                        sem,
-                        sed
-                        ullamcorper felis laoreet in. Donec vitae porta nibh. Duis vestibulum tincidunt enim in
-                        lobortis.
-                        Fusce ut nunc
-                        eget enim condimentum tempus.
-                    </p>
+                <article class="card modular info">
+                    <h2>Email</h2>
+                    <p>tanesamuelkaio@gmail.com</p>
                 </article>
+
+                <article class="card modular info">
+                    <h2>Phone</h2>
+                    <p>04-666-518-20</p>
+                </article>
+
             </section>
-            <section class="content">
-                <div class="container">
-                    <form action="./code.html">
-                        <input type="submit" value="Code" class="button" />
-                    </form>
-                    <form action="./resume.html">
-                        <input type="submit" value="Resume" class="button" />
-                    </form>
-                </div>
-            </section>
-        </main>
     </section>
     <footer>
         <p id="footer-text">&copy; Tané Kaio, 2022</p>
