--- a/journal-v2.html
+++ b/journal-v2.html
@@ -56,7 +56,9 @@
         <main>
             <section class="content">
                 <!-- PAGE SUBHEADING -->
-                <h2 class="desk-page-sub">about . about . about . about . about . about . about . about . about</h2>
+                <span class="page-subheading">
+                    <h2>about . about . about . about . about . about . about . about . about</h2>
+                </span>
 
                 <div class="card">
                     <label for="expand-check1" class="expand-icon">+/-
