--- a/resume-v2.html
+++ b/resume-v2.html
@@ -16,7 +16,7 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>About / TK</title>
+    <title>Resume</title>
 </head>
 
 <body>
@@ -60,37 +60,19 @@
                     <h2>about . about . about . about . about . about . about . about . about</h2>
                 </span>
 
-                <figure id="about-img-cont">
-                    <img id="about-img" class="img" src="./img/nz-port.jpg" alt="An image of me">
-                </figure>
-
                 <article class="card">
-                    <h2>About me</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec ex tellus. Nulla et orci
-                        interdum,
-                        congue
-                        nisl in, ultricies massa. Pellentesque lobortis velit a faucibus ornare. Duis convallis tortor
-                        sem,
-                        sed
-                        ullamcorper felis laoreet in. Donec vitae porta nibh. Duis vestibulum tincidunt enim in
-                        lobortis.
-                        Fusce ut nunc
-                        eget enim condimentum tempus.
-                    </p>
+                    <iframe src="./img/resume-template.pdf"></iframe>
                 </article>
-            </section>
-            <section class="content">
+
                 <div class="container">
-                    <form action="./code.html">
-                        <input type="submit" value="Code" class="button" />
-                    </form>
-                    <form action="./resume.html">
-                        <input type="submit" value="Resume" class="button" />
-                    </form>
+                    <a class="button" href="./img/resume-template.pdf" download>
+                        Download
+                    </a>
                 </div>
-            </section>
+
         </main>
     </section>
+
     <footer>
         <p id="footer-text">&copy; Tané Kaio, 2022</p>
     </footer>
