--- a/BOILERPLATE.html
+++ b/BOILERPLATE.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./tidy.css" />
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,59 +16,55 @@
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>Home / TK</title>
+  <title>About / TK</title>
 </head>
 
 <body>
+  <!-- HEADER MODULE -->
   <header>
-    <h1>portfolio</h1>
-    <div id="head-circle"></div>
-  </header>
-  <!-- MOBILE MENU -->
-  <nav id="nav-cont-mob">
-    <input type="checkbox" id="nav-button-mob" />
-    <label for="nav-button-mob"><span class="fa-solid fa-bars" id="nav-icon-mob"></span></label>
-    <label for="nav-button-mob"><span id="blank-span">Me<br />nu</span></label>
-    <div id="nav-links-mob">
-      <ul class="nav-list" id="nav-list-mob">
-        <li><a href="./about.html">about</a></li>
-        <li><a href="./code.html">code</a></li>
-        <!-- <li><a href="./personal.html">personal</a></li> -->
-        <li><a href="./journal.html">journal</a></li>
-        <li><a href="./resume.html">resume</a></li>
-        <li><a href="./contact.html">contact</a></li>
-      </ul>
+    <!-- HEADER TITLE+CIRCLE -->
+    <div id="header-cont">
+      <h1 id="header-text">portfolio</h1>
+      <div id="header-circle"></div>
     </div>
-  </nav>
-  <!-- DESKTOP MENU -->
-  <input type="checkbox" id="nav-button-desk" />
-  <label for="nav-button-desk" id="menu-text-desk">menu<br /><span class="fa-solid fa-arrows-alt-h"
-      id="arrow"></span></label>
-  <nav id="nav-cont-desk">
-    <ul class="nav-list" id="nav-list-desk">
-      <li><a href="./about.html">about</a></li>
-      <li><a href="./code.html">code</a></li>
+  </header>
+  <!-- MOBILE NAV MENU -->
+
+  <!-- DESK MENU TEXT BUTTON/ICON
+            <input type="checkbox" id="desk-nav-button" />
+            <label for="desk-nav-button" id="desk-nav-icon">menu</label> -->
+
+  <section id="main-container">
+    <!-- MOBILE HAMBURGER BUTTON/ICON -->
+    <input type="checkbox" id="mob-nav-button" />
+    <label for="mob-nav-button">
+      <span class="fa-solid fa-bars" id="mob-nav-icon">
+      </span>
+    </label>
+    <!-- NAV LIST MENU -->
+    <nav id="nav-list">
+      <li><a href="./about-v2.html">about</a></li>
+      <li><a href="./code-v2.html">code</a></li>
       <!-- <li><a href="./personal.html">personal</a></li> -->
-      <li><a href="./journal.html">journal</a></li>
-      <li><a href="./resume.html">resume</a></li>
-      <li><a href="./contact.html">contact</a></li>
-      <li><img id="portrait" src="./img/archie.png" alt="Portrait" /></li>
-    </ul>
-  </nav>
+      <li><a href="./journal-v2.html">journal</a></li>
+      <li><a href="./resume-v2.html">resume</a></li>
+      <li><a href="./contact-v2.html">contact</a></li>
+      </div>
+    </nav>
+    </header>
 
-  <main>
-    <!-- PAGE SUBHEADING -->
-    <h2 class="desk-page-sub">about . about . about . about . about . about . about . about . about</h2>
+    <main>
+      <section class="content">
 
+        <!-- PAGE SUBHEADING -->
+        <span class="page-subheading">
+          <h2>about . about . about . about . about . about . about . about . about</h2>
+      </span>
 
-
-  </main>
-
+      </section>
+  </section>
   <footer>
-    <p>&copy; Tané Kaio, 2022</p>
-    <form action="./contact.html">
-      <input type="submit" value="Contact me" id="contact-button" />
-    </form>
+    <p id="footer-text">&copy; Tané Kaio, 2022</p>
   </footer>
 </body>
 
