--- a/contact-v2.html
+++ b/contact-v2.html
@@ -71,6 +71,18 @@
                     <p>04-666-518-20</p>
                 </article>
 
+                <div class="container">
+                      <a href="https://github.com/Lanruoj" target="_blank">
+                        <img class="logo" src="./img/github.png" alt="Github" />
+                      </a>
+                      <a href="https://twitter.com" target="_blank">
+                        <img class="logo" src="./img/twitter.png" alt="Twitter" />
+                      </a>
+                      <a href="https://au.linkedin.com" target="_blank">
+                        <img class="logo" src="./img/linkedin.png" alt="Linkedin" />
+                      </a>
+                  </div>
+
             </section>
     </section>
     <footer>
