Added .space div to bottom of code to have space

--- a/code-v2.html
+++ b/code-v2.html
@@ -118,7 +118,9 @@
                 </article>
 
             </section>
-            <div class="content"></div>
+
+            <div class="space"></div>
+            
         </main>
     </section>
     <footer>
