Tablet/landscape done, doing desktop, adding desktop menu button

--- a/about-v2.html
+++ b/about-v2.html
@@ -30,11 +30,10 @@
     </header>
     <!-- MOBILE NAV MENU -->
 
-    <!-- DESK MENU TEXT BUTTON/ICON
-            <input type="checkbox" id="desk-nav-button" />
-            <label for="desk-nav-button" id="desk-nav-icon">menu</label> -->
-
     <section id="main-container">
+        <!-- DESK MENU TEXT BUTTON/ICON -->
+        <input type="checkbox" id="desk-nav-button" />
+        <label for="desk-nav-button" id="desk-nav-icon">menu</label>
         <!-- MOBILE HAMBURGER BUTTON/ICON -->
         <input type="checkbox" id="mob-nav-button" />
         <label for="mob-nav-button">
