--- a/resume-v2.html
+++ b/resume-v2.html
@@ -60,7 +60,7 @@
                     <h2>about . about . about . about . about . about . about . about . about</h2>
                 </span>
 
-                <article class="card">
+                <article class="card doc">
                     <iframe src="./img/resume-template.pdf"></iframe>
                 </article>
 
