--- a/journal-v2.html
+++ b/journal-v2.html
@@ -35,10 +35,18 @@
             <label for="desk-nav-button" id="desk-nav-icon">menu</label> -->
 
     <section id="main-container">
-        <!-- MOBILE HAMBURGER BUTTON/ICON -->
-        <input type="checkbox" id="mob-nav-button" />
-        <label for="mob-nav-button">
+        <!-- BUTTON/ICON FOR NAV MENU -->
+        <input type="checkbox" id="nav-check" />
+        <label for="nav-check" id="nav-button">
+            <!-- MOBILE BUTTON -->
             <span class="fa-solid fa-bars" id="mob-nav-icon">
+            </span>
+            <!-- DESKTOP BUTTON -->
+            <span id="desk-nav-icon">
+                <h2 id="menu-text">menu</h2>
+                <span id="arrows">
+                    <i class="fa-solid fa-long-arrow-alt-left arrow"></i><i class="fa-solid fa-long-arrow-alt-right arrow"></i>
+                </span>
             </span>
         </label>
         <!-- NAV LIST MENU -->
@@ -51,7 +59,6 @@
             <li><a href="./contact-v2.html">contact</a></li>
             </div>
         </nav>
-        </header>
 
         <main>
             <section class="content">
@@ -60,7 +67,7 @@
                     <h2>about . about . about . about . about . about . about . about . about</h2>
                 </span>
 
-                <div class="card">
+                <div class="card article">
                     <label for="expand-check1" class="expand-icon">+/-
                         <a id="anchor-blog1"></a>
                     </label>
@@ -138,7 +145,7 @@
                     </article>
                 </div>
 
-                <div class="card">
+                <div class="card article">
                     <label for="expand-check2" class="expand-icon">+/-
                         <a id="anchor-blog2"></a>
                     </label>
@@ -215,7 +222,7 @@
                     </article>
                 </div>
 
-                <div class="card">
+                <div class="card article">
                     <label for="expand-check3" class="expand-icon">+/-
                         <a id="anchor-blog3"></a>
                     </label>
@@ -292,7 +299,7 @@
                     </article>
                 </div>
 
-                <div class="card">
+                <div class="card article">
                     <label for="expand-check4" class="expand-icon">+/-
                         <a id="anchor-blog4"></a>
                     </label>
@@ -369,7 +376,7 @@
                     </article>
                 </div>
 
-                <div class="card">
+                <div class="card article">
                     <label for="expand-check5" class="expand-icon">+/-
                         <a id="anchor-blog5"></a>
                     </label>
