--- a/resume-v2.html
+++ b/resume-v2.html
@@ -35,10 +35,18 @@
             <label for="desk-nav-button" id="desk-nav-icon">menu</label> -->
 
     <section id="main-container">
-        <!-- MOBILE HAMBURGER BUTTON/ICON -->
-        <input type="checkbox" id="mob-nav-button" />
-        <label for="mob-nav-button">
+        <!-- BUTTON/ICON FOR NAV MENU -->
+        <input type="checkbox" id="nav-check" />
+        <label for="nav-check" id="nav-button">
+            <!-- MOBILE BUTTON -->
             <span class="fa-solid fa-bars" id="mob-nav-icon">
+            </span>
+            <!-- DESKTOP BUTTON -->
+            <span id="desk-nav-icon">
+                <h2 id="menu-text">menu</h2>
+                <span id="arrows">
+                    <i class="fa-solid fa-long-arrow-alt-left arrow"></i><i class="fa-solid fa-long-arrow-alt-right arrow"></i>
+                </span>
             </span>
         </label>
         <!-- NAV LIST MENU -->
@@ -51,7 +59,6 @@
             <li><a href="./contact-v2.html">contact</a></li>
             </div>
         </nav>
-        </header>
 
         <main>
             <section class="content">
