Added article class to about me card

--- a/about-v2.html
+++ b/about-v2.html
@@ -67,7 +67,7 @@
                     <img id="about-img" class="img" src="./img/nz-port.jpg" alt="An image of me">
                 </figure>
 
-                <article class="card">
+                <article class="card article">
                     <h2>About me</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec ex tellus. Nulla et orci
                         interdum,
