anchor links added to dropdown list

--- a/journal-v2.html
+++ b/journal-v2.html
@@ -78,11 +78,11 @@
                     </label>
                     <input type="checkbox" id="dropdown-check"/>
                     <ul class="dropdown-list">
-                        <li><a href="#journal-card-1">Blog Post One</a></li>
-                        <li><a href="#journal-card-2">Blog Post Two</a></li>
-                        <li><a href="#journal-card-3">Blog Post Three</a></li>
-                        <li><a href="#journal-card-4">Blog Post Four</a></li>
-                        <li><a href="#journal-card-5">Blog Post Five</a></li>
+                        <li><a href="#anchor-blog1">Blog Post One</a></li>
+                        <li><a href="#anchor-blog2">Blog Post Two</a></li>
+                        <li><a href="#anchor-blog3">Blog Post Three</a></li>
+                        <li><a href="#anchor-blog4">Blog Post Four</a></li>
+                        <li><a href="#anchor-blog5">Blog Post Five</a></li>
                     </ul>
                 </div>
 
