fixed aboutv2 nav and scss for validation

--- a/about-v2.html
+++ b/about-v2.html
@@ -41,19 +41,22 @@
             <span id="desk-nav-icon">
                 <span id="menu-text">menu</span>
                 <span id="arrows">
-                    <i class="fa-solid fa-long-arrow-alt-left arrow"></i><i class="fa-solid fa-long-arrow-alt-right arrow"></i>
+                    <i class="fa-solid fa-long-arrow-alt-left arrow"></i><i
+                        class="fa-solid fa-long-arrow-alt-right arrow"></i>
                 </span>
             </span>
         </label>
         <!-- NAV LIST MENU -->
-        <nav id="nav-list">
-            <li><a href="./about-v2.html">about</a></li>
-            <li><a href="./code-v2.html">code</a></li>
-            <!-- <li><a href="./personal.html">personal</a></li> -->
-            <li><a href="./journal-v2.html">journal</a></li>
-            <li><a href="./resume-v2.html">resume</a></li>
-            <li><a href="./contact-v2.html">contact</a></li>
-            </div>
+        <nav>
+            <ul id="nav-list">
+                <li><a href="./about-v2.html">about</a></li>
+                <li><a href="./code-v2.html">code</a></li>
+                <!-- <li><a href="./personal.html">personal</a></li> -->
+                <li><a href="./journal-v2.html">journal</a></li>
+                <li><a href="./resume-v2.html">resume</a></li>
+                <li><a href="./contact-v2.html">contact</a></li>
+                </div>
+            </ul>
         </nav>
 
         <main>
@@ -82,7 +85,7 @@
                     </p>
                 </article>
             </section>
-            
+
             <section class="content">
                 <div class="container">
                     <form action="./code.html">
