--- a/resume-v2.html
+++ b/resume-v2.html
@@ -28,37 +28,33 @@
             <div id="header-circle"></div>
         </div>
     </header>
-    <!-- MOBILE NAV MENU -->
 
-    <!-- DESK MENU TEXT BUTTON/ICON
-            <input type="checkbox" id="desk-nav-button" />
-            <label for="desk-nav-button" id="desk-nav-icon">menu</label> -->
-
-    <section id="main-container">
-        <!-- BUTTON/ICON FOR NAV MENU -->
-        <input type="checkbox" id="nav-check" />
-        <label for="nav-check" id="nav-button">
-            <!-- MOBILE BUTTON -->
-            <span class="fa-solid fa-bars" id="mob-nav-icon">
+    <!-- BUTTON/ICON FOR NAV MENU -->
+    <input type="checkbox" id="nav-check" />
+    <label for="nav-check" id="nav-button">
+        <!-- MOBILE BUTTON -->
+        <span class="fa-solid fa-bars" id="mob-nav-icon">
+        </span>
+        <!-- DESKTOP BUTTON -->
+        <span id="desk-nav-icon">
+            <span id="menu-text">menu</span>
+            <span id="arrows">
+                <i class="fa-solid fa-long-arrow-alt-left arrow"></i><i
+                    class="fa-solid fa-long-arrow-alt-right arrow"></i>
             </span>
-            <!-- DESKTOP BUTTON -->
-            <span id="desk-nav-icon">
-                <h2 id="menu-text">menu</h2>
-                <span id="arrows">
-                    <i class="fa-solid fa-long-arrow-alt-left arrow"></i><i class="fa-solid fa-long-arrow-alt-right arrow"></i>
-                </span>
-            </span>
-        </label>
-        <!-- NAV LIST MENU -->
-        <nav id="nav-list">
+        </span>
+    </label>
+    <!-- NAV LIST MENU -->
+    <nav>
+        <ul id="nav-list">
             <li><a href="./about-v2.html">about</a></li>
             <li><a href="./code-v2.html">code</a></li>
             <!-- <li><a href="./personal.html">personal</a></li> -->
             <li><a href="./journal-v2.html">journal</a></li>
             <li><a href="./resume-v2.html">resume</a></li>
             <li><a href="./contact-v2.html">contact</a></li>
-            </div>
-        </nav>
+        </ul>
+    </nav>
 
         <main>
             <section class="content">
