All HTML validated

--- a/about-v2.html
+++ b/about-v2.html
@@ -59,9 +59,7 @@
     <main>
         <section class="content">
             <!-- PAGE SUBHEADING -->
-            <span class="page-subheading">
-                <h2>about . about . about . about . about . about . about . about . about</h2>
-            </span>
+            <h2 id="page-sub">about</h2>
 
             <figure id="about-img-cont">
                 <img id="about-img" class="img" src="./img/nz-port.jpg" alt="An image of me">
