--- a/contact-v2.html
+++ b/contact-v2.html
@@ -16,7 +16,7 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Contact</title>
+    <title>Contact / TK</title>
 </head>
 
 <body>
@@ -29,66 +29,63 @@
         </div>
     </header>
 
-        <!-- BUTTON/ICON FOR NAV MENU -->
-        <input type="checkbox" id="nav-check" />
-        <label for="nav-check" id="nav-button">
-            <!-- MOBILE BUTTON -->
-            <span class="fa-solid fa-bars" id="mob-nav-icon">
+    <!-- BUTTON/ICON FOR NAV MENU -->
+    <input type="checkbox" id="nav-check" />
+    <label for="nav-check" id="nav-button">
+        <!-- MOBILE BUTTON -->
+        <span class="fa-solid fa-bars" id="mob-nav-icon">
+        </span>
+        <!-- DESKTOP BUTTON -->
+        <span id="desk-nav-icon">
+            <span id="menu-text">menu</span>
+            <span id="arrows">
+                <i class="fa-solid fa-long-arrow-alt-left arrow"></i><i
+                    class="fa-solid fa-long-arrow-alt-right arrow"></i>
             </span>
-            <!-- DESKTOP BUTTON -->
-            <span id="desk-nav-icon">
-                <span id="menu-text">menu</span>
-                <span id="arrows">
-                    <i class="fa-solid fa-long-arrow-alt-left arrow"></i><i
-                        class="fa-solid fa-long-arrow-alt-right arrow"></i>
-                </span>
-            </span>
-        </label>
-        <!-- NAV LIST MENU -->
-        <nav>
-            <ul id="nav-list">
-                <li><a href="./about-v2.html">about</a></li>
-                <li><a href="./code-v2.html">code</a></li>
-                <!-- <li><a href="./personal.html">personal</a></li> -->
-                <li><a href="./journal-v2.html">journal</a></li>
-                <li><a href="./resume-v2.html">resume</a></li>
-                <li><a href="./contact-v2.html">contact</a></li>
-            </ul>
-        </nav>
-    
+        </span>
+    </label>
+    <!-- NAV LIST MENU -->
+    <nav>
+        <ul id="nav-list">
+            <li><a href="./about-v2.html">about</a></li>
+            <li><a href="./code-v2.html">code</a></li>
+            <!-- <li><a href="./personal.html">personal</a></li> -->
+            <li><a href="./journal-v2.html">journal</a></li>
+            <li><a href="./resume-v2.html">resume</a></li>
+            <li><a href="./contact-v2.html">contact</a></li>
+        </ul>
+    </nav>
 
-        <main>
-            <section class="content">
 
-                <!-- PAGE SUBHEADING -->
-                <span class="page-subheading">
-                    <h2>about . about . about . about . about . about . about . about . about</h2>
-                </span>
+    <main>
+        <section class="content">
+            <!-- PAGE SUBHEADING -->
+            <h2 id="page-sub">contact</h2>
 
-                <article class="card modular info">
-                    <h2>Email</h2>
-                    <p>tanesamuelkaio@gmail.com</p>
-                </article>
+            <article class="card modular info">
+                <h2>Email</h2>
+                <p>tanesamuelkaio@gmail.com</p>
+            </article>
 
-                <article class="card modular info">
-                    <h2>Phone</h2>
-                    <p>04-666-518-20</p>
-                </article>
+            <article class="card modular info">
+                <h2>Phone</h2>
+                <p>04-666-518-20</p>
+            </article>
 
-                <div class="container">
-                      <a href="https://github.com/Lanruoj" target="_blank">
-                        <img class="logo" src="./img/github.png" alt="Github" />
-                      </a>
-                      <a href="https://twitter.com" target="_blank">
-                        <img class="logo" src="./img/twitter.png" alt="Twitter" />
-                      </a>
-                      <a href="https://au.linkedin.com" target="_blank">
-                        <img class="logo" src="./img/linkedin.png" alt="Linkedin" />
-                      </a>
-                  </div>
+            <div class="container">
+                <a href="https://github.com/Lanruoj" target="_blank">
+                    <img class="logo" src="./img/github.png" alt="Github" />
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img class="logo" src="./img/twitter.png" alt="Twitter" />
+                </a>
+                <a href="https://au.linkedin.com" target="_blank">
+                    <img class="logo" src="./img/linkedin.png" alt="Linkedin" />
+                </a>
+            </div>
 
-            </section>
-    </section>
+        </section>
+    </main>
     <footer>
         <p id="footer-text">&copy; Tané Kaio, 2022</p>
     </footer>
