--- a/resume-v2.html
+++ b/resume-v2.html
@@ -16,7 +16,7 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Resume</title>
+    <title>Resume / TK</title>
 </head>
 
 <body>
@@ -56,25 +56,23 @@
         </ul>
     </nav>
 
-        <main>
-            <section class="content">
-                <!-- PAGE SUBHEADING -->
-                <span class="page-subheading">
-                    <h2>about . about . about . about . about . about . about . about . about</h2>
-                </span>
+    <main>
+        <section class="content">
+            <!-- PAGE SUBHEADING -->
+            <h2 id="page-sub">resume</h2>
 
-                <article class="card doc">
-                    <iframe src="./img/resume-template.pdf"></iframe>
-                </article>
+            <article class="card doc">
+                <h2>Resume</h2>
+                <iframe src="./img/resume-template.pdf"></iframe>
+            </article>
 
-                <div class="container">
-                    <a class="button" href="./img/resume-template.pdf" download>
-                        Download
-                    </a>
-                </div>
-
-        </main>
-    </section>
+            <div class="container">
+                <a class="button" href="./img/resume-template.pdf" download>
+                    Download
+                </a>
+            </div>
+        </section>
+    </main>
 
     <footer>
         <p id="footer-text">&copy; Tané Kaio, 2022</p>
