--- a/BOILERPLATE.html
+++ b/BOILERPLATE.html
@@ -2,70 +2,71 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./tidy.css" />
-  <!-- FONTS -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet" />
-  <!-- FONT-AWESOME ICONS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./tidy.css" />
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet" />
+    <!-- FONT-AWESOME ICONS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>About / TK</title>
+    <title>Title</title>
 </head>
 
 <body>
-  <!-- HEADER MODULE -->
-  <header>
-    <!-- HEADER TITLE+CIRCLE -->
-    <div id="header-cont">
-      <h1 id="header-text">portfolio</h1>
-      <div id="header-circle"></div>
-    </div>
-  </header>
-  <!-- MOBILE NAV MENU -->
-
-  <!-- DESK MENU TEXT BUTTON/ICON
-            <input type="checkbox" id="desk-nav-button" />
-            <label for="desk-nav-button" id="desk-nav-icon">menu</label> -->
-
-  <section id="main-container">
-    <!-- MOBILE HAMBURGER BUTTON/ICON -->
-    <input type="checkbox" id="mob-nav-button" />
-    <label for="mob-nav-button">
-      <span class="fa-solid fa-bars" id="mob-nav-icon">
-      </span>
-    </label>
-    <!-- NAV LIST MENU -->
-    <nav id="nav-list">
-      <li><a href="./about-v2.html">about</a></li>
-      <li><a href="./code-v2.html">code</a></li>
-      <!-- <li><a href="./personal.html">personal</a></li> -->
-      <li><a href="./journal-v2.html">journal</a></li>
-      <li><a href="./resume-v2.html">resume</a></li>
-      <li><a href="./contact-v2.html">contact</a></li>
-      </div>
-    </nav>
+    <!-- HEADER MODULE -->
+    <header>
+        <!-- HEADER TITLE+CIRCLE -->
+        <div id="header-cont">
+            <h1 id="header-text">portfolio</h1>
+            <div id="header-circle"></div>
+        </div>
     </header>
 
+    <!-- BUTTON/ICON FOR NAV MENU -->
+    <input type="checkbox" id="nav-check" />
+    <label for="nav-check" id="nav-button">
+        <!-- MOBILE BUTTON -->
+        <span class="fa-solid fa-bars" id="mob-nav-icon">
+        </span>
+        <!-- DESKTOP BUTTON -->
+        <span id="desk-nav-icon">
+            <span id="menu-text">menu</span>
+            <span id="arrows">
+                <i class="fa-solid fa-long-arrow-alt-left arrow"></i><i
+                    class="fa-solid fa-long-arrow-alt-right arrow"></i>
+            </span>
+        </span>
+    </label>
+    <!-- NAV LIST MENU -->
+    <nav>
+        <ul id="nav-list">
+            <li><a href="./about-v2.html">about</a></li>
+            <li><a href="./code-v2.html">code</a></li>
+            <!-- <li><a href="./personal.html">personal</a></li> -->
+            <li><a href="./journal-v2.html">journal</a></li>
+            <li><a href="./resume-v2.html">resume</a></li>
+            <li><a href="./contact-v2.html">contact</a></li>
+        </ul>
+    </nav>
+
     <main>
-      <section class="content">
+        <section class="content">
+            <!-- PAGE SUBHEADING -->
+            <h2></h2>
 
-        <!-- PAGE SUBHEADING -->
-        <span class="page-subheading">
-          <h2>about . about . about . about . about . about . about . about . about</h2>
-      </span>
+        </section>
+    </main>
 
-      </section>
-  </section>
-  <footer>
-    <p id="footer-text">&copy; Tané Kaio, 2022</p>
-  </footer>
+    <footer>
+        <p id="footer-text">&copy; Tané Kaio, 2022</p>
+    </footer>
 </body>
 
 </html>
