started about - validated:

--- a/about-v2.html
+++ b/about-v2.html
@@ -24,7 +24,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <h1 id="header-text">portfolio</h1>
+            <h1 id="header-text">tané</h1>
             <div id="header-circle"></div>
         </div>
     </header>
@@ -66,18 +66,15 @@
             </figure>
 
             <div class="modular">
-                <article class="card article modular">
+                <article class="card article">
                     <h2>About me</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec ex tellus. Nulla et orci
-                        interdum,
-                        congue
-                        nisl in, ultricies massa. Pellentesque lobortis velit a faucibus ornare. Duis convallis tortor
-                        sem,
-                        sed
-                        ullamcorper felis laoreet in. Donec vitae porta nibh. Duis vestibulum tincidunt enim in
-                        lobortis.
-                        Fusce ut nunc
-                        eget enim condimentum tempus.
+                    <p>
+                        Hey there!
+                        <br>
+                        I'm Tané - a 26 year old currently based in the foothills of the Dandenong Ranges in Melbourne, Victoria. As a student of Web Development at Coder Academy I spend most of my time learning and practising code, sharpening my problem solving skills and learning more about the world of tech.
+                        <br>
+
+                        My adventure into the world of coding may not have started long ago, however I've already learned an immense 
                     </p>
                 </article>
 
