--- a/contact-v2.html
+++ b/contact-v2.html
@@ -24,7 +24,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <h1 id="header-text">portfolio</h1>
+            <h1 id="header-text">tané</h1>
             <div id="header-circle"></div>
         </div>
     </header>
