Added personal cardsx2 - validated

--- a/about-v2.html
+++ b/about-v2.html
@@ -49,7 +49,7 @@
         <ul id="nav-list">
             <li><a href="./about-v2.html">about</a></li>
             <li><a href="./code-v2.html">code</a></li>
-            <!-- <li><a href="./personal.html">personal</a></li> -->
+            <li><a href="./personal-v2.html">personal</a></li>
             <li><a href="./journal-v2.html">journal</a></li>
             <li><a href="./resume-v2.html">resume</a></li>
             <li><a href="./contact-v2.html">contact</a></li>
@@ -68,8 +68,7 @@
             <article class="card article">
                 <h2>About me</h2>
                 <p>
-                    Hey there!
-                    <br>
+                    <em>Hey there!</em>
                     I'm Tané - a 26 year old currently based in the lush surroundings of the foothills of the
                     Dandenong Ranges in Melbourne, Victoria. As a student of Web Development at Coder Academy I
                     spend most of my time learning and practising code, sharpening my problem solving skills and
@@ -79,7 +78,7 @@
                     learned an immense amount of valuable practical lessons and industry specific knowledge. Below
                     are some of the tools and skills I've learned so far:
                 </p>
-                <section class="card-list">
+                <section class="card-lists">
                     <div>
                         <h3>Languages</h3>
                         <ul>
