--- a/contact-v2.html
+++ b/contact-v2.html
@@ -49,7 +49,7 @@
         <ul id="nav-list">
             <li><a href="./about-v2.html">about</a></li>
             <li><a href="./code-v2.html">code</a></li>
-            <!-- <li><a href="./personal.html">personal</a></li> -->
+            <li><a href="./personal-v2.html">personal</a></li>
             <li><a href="./journal-v2.html">journal</a></li>
             <li><a href="./resume-v2.html">resume</a></li>
             <li><a href="./contact-v2.html">contact</a></li>
